# beadsplan

./: CMakeLists.txt  ColorCatalog.cpp  ColorCatalog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
gco/: GCoptimization.h
